# lib/api-spec/openapi.yaml
@@ -1304,8 +1304,10 @@ components:
           type: ["string", "null"]
         isDigital:
           type: boolean
-        downloadUrl:
-          type: ["string", "null"]
+        downloadUrls:
+          type: array
+          items:
+            type: string
 
     ProductUpdate:
       type: object
@@ -1342,8 +1344,10 @@ components:
           type: ["string", "null"]
         isDigital:
           type: boolean
-        downloadUrl:
-          type: ["string", "null"]
+        downloadUrls:
+          type: array
+          items:
+            type: string
 
     AdminLoginInput:
       type: object
@@ -1381,7 +1385,7 @@ components:
           isNew,
           badge,
           isDigital,
-          downloadUrl,
+          downloadUrls,
           createdAt,
         ]
       properties:
@@ -1421,8 +1425,10 @@ components:
           type: ["string", "null"]
         isDigital:
           type: boolean
-        downloadUrl:
-          type: ["string", "null"]
+        downloadUrls:
+          type: array
+          items:
+            type: string
         createdAt:
           type: string
           format: date-time
@@ -1539,8 +1545,10 @@ components:
           type: integer
         isDigital:
           type: boolean
-        downloadUrl:
-          type: ["string", "null"]
+        downloadUrls:
+          type: array
+          items:
+            type: string
 
     Order:
       type: object
